# xp-bazel

./: .bazelrc  .gitignore  BUILD.bazel  Jenkinsfile  MODULE.bazel  README.md  bazel-course.md  jenkins.ngrok.yaml
cpp-task/: BUILD.bazel  lib.cc  main.cc  main.h  main_test.cc
cpp-task/subtask-a/: BUILD.bazel  subtask_a.cc  subtask_a.h
cpp-task/subtask-b/: BUILD.bazel  subtask_b.cc  subtask_b.h
csharp-task/: BUILD.bazel  Program.cs  ProgramTest.cs
csharp-task/subtask-a/: SubtaskA.cs
csharp-task/subtask-b/: SubtaskB.cs
go-task/: BUILD.bazel  fixture_test.go  main.go  main_test.go
go-task/subtask-a/: BUILD.bazel  subtask_a.go  subtask_a_test.go
go-task/subtask-b/: BUILD.bazel  subtask_b.go  subtask_b_test.go
go-task/testdata/: expected_messages.json
java-task/: BUILD.bazel
java-task/src/: Main.java
java-task/subtask-a/: BUILD.bazel  SubtaskA.java
java-task/subtask-b/: BUILD.bazel  SubtaskB.java
java-task/test/: MainTest.java
js-task/: BUILD.bazel  main.js  main.test.js
js-task/subtask-a/: BUILD.bazel  subtask_a.js
js-task/subtask-b/: BUILD.bazel  subtask_b.js
python-task/: BUILD.bazel  fixture_test.py  flaky_test.py  main.py  main_test.py
python-task/subtask_a/: BUILD.bazel  subtask_a.py  subtask_a_test.py
python-task/subtask_b/: BUILD.bazel  subtask_b.py  subtask_b_test.py
python-task/testdata/: expected_messages.json
task-orchestrator/: BUILD.bazel  main.py
tools/aspects/: BUILD.bazel  target_info.bzl
tools/build_defs/: BUILD.bazel  cc_helpers.bzl  common.bzl  go_service.bzl  header_file.bzl  module_info.bzl  task_info.bzl  word_count.bzl  wordcount_tool.py
