module(
    name = "xp_bazel",
    version = "0.0.1",
)

# C++
bazel_dep(name = "rules_cc", version = "0.2.17")

# Java
bazel_dep(name = "rules_java", version = "9.1.0")

# Go
bazel_dep(name = "rules_go", version = "0.60.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.4")

# JavaScript / Node.js
bazel_dep(name = "aspect_rules_js", version = "3.1.1")
bazel_dep(name = "rules_nodejs", version = "6.7.4")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "20.11.1")

# Python
bazel_dep(name = "rules_python", version = "1.7.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")

# C# / .NET
bazel_dep(name = "rules_dotnet", version = "0.21.5")

dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
dotnet.toolchain(dotnet_version = "9.0.100")
use_repo(dotnet, "dotnet_toolchains")

register_toolchains("@dotnet_toolchains//:all")

# --- Module 5: External Dependencies ---

# 1. Pure Bazel module
bazel_dep(name = "bazel_skylib", version = "1.8.2")

# 2. C/C++ library from BCR
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")

# 3. Language ecosystem package (pip)
# pip.parse() is a module extension — it runs once globally, not per-package.
# The requirements_lock.txt could live in python-task/ instead of the root,
# but in large monorepos it's typically kept at the root because all Python
# targets share the same resolved pip dependencies.
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip_deps",
    python_version = "3.12",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip_deps")
