load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")

write_file(
    name = "version_file",
    out = "version.txt",
    content = ["0.0.1"],
)

java_library(
    name = "main_lib",
    srcs = ["src/Main.java"],
    deps = [
        "//java-task/subtask-a",
        "//java-task/subtask-b",
    ],
    visibility = ["//visibility:public"],
)

java_binary(
    name = "main",
    main_class = "Main",
    runtime_deps = [":main_lib"],
    data = [":version_file"],
    visibility = ["//visibility:public"],
)

java_test(
    name = "main_test",
    srcs = ["test/MainTest.java"],
    test_class = "MainTest",
    deps = [":main_lib"],
)
