load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_test")

js_binary(
    name = "main",
    entry_point = "main.js",
    data = [
        "//js-task/subtask-a",
        "//js-task/subtask-b",
    ],
    visibility = ["//visibility:public"],
)

js_test(
    name = "main_test",
    entry_point = "main.test.js",
    data = [
        ":main.js",
        "//js-task/subtask-a",
        "//js-task/subtask-b",
    ],
)
