load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

py_library(
    name = "main_lib",
    srcs = ["main.py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "main",
    srcs = ["main.py"],
    deps = [
        "//python-task/subtask_a",
        "//python-task/subtask_b",
    ],
    visibility = ["//visibility:public"],
)

py_test(
    name = "main_test",
    srcs = ["main_test.py"],
    deps = [":main_lib"],
)
