load("@rules_go//go:def.bzl", "go_library", "go_test")

# Make source files visible to //tools/build_defs for Module 10 exercises.
exports_files(["subtask_a.go"], visibility = ["//tools/build_defs:__pkg__"])

go_library(
    name = "subtask-a",
    srcs = ["subtask_a.go"],
    importpath = "xp_bazel/go-task/subtask-a",
    visibility = ["//go-task:__pkg__"],
)

go_test(
    name = "subtask-a_test",
    srcs = ["subtask_a_test.go"],
    size = "small",
    embed = [":subtask-a"],
)
