load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "subtask-b",
    srcs = ["subtask_b.go"],
    importpath = "xp_bazel/go-task/subtask-b",
    visibility = ["//go-task:__pkg__"],
)

go_test(
    name = "subtask-b_test",
    srcs = ["subtask_b_test.go"],
    size = "small",
    embed = [":subtask-b"],
)
