load("@rules_go//go:def.bzl", "go_library", "go_test")

# Make source files visible to //tools/build_defs for Module 10 exercises.
exports_files(["subtask_b.go"], visibility = ["//tools/build_defs:__pkg__"])

go_library(
    name = "subtask-b",
    srcs = ["subtask_b.go"],
    importpath = "xp_bazel/go-task/subtask-b",
    visibility = ["//go-task:__pkg__"],
)

go_test(
    name = "subtask-b_test",
    srcs = ["subtask_b_test.go"],
    size = "small",
    embed = [":subtask-b"],
)
