load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "subtask_a",
    srcs = ["subtask_a.py"],
    imports = [".."],
    visibility = ["//python-task:__subpackages__"],
)

py_test(
    name = "subtask_a_test",
    srcs = ["subtask_a_test.py"],
    size = "small",
    deps = [":subtask_a"],
)
